--- a/css/style.css
+++ b/css/style.css
@@ -12,28 +12,29 @@
     --whitecolor: white;
     --slatecolor: #434455;
 }
+
 /*-----------------------------------*\
   #Header
 \*-----------------------------------*/
 .link-logo {
     text-decoration: none;
-    font-family: "Raleway", sans-serif; 
+    font-family: "Raleway", sans-serif;
     font-size: 18px;
     line-height: 1.5;
     font-weight: 800;
 }
 
-.web-logo {
+.web-l {
     color: var(--iriscolor);
     font-weight: bold;
 }
 
-.studio-logo {
-    color: var(--navyblue);
+.studio-l {
+    color: var(--navyblue, #2E2F42);
     font-weight: bold;
 }
 
-.navbar .pages{
+.navbar .pages {
     color: var(--navcolor);
     text-decoration: none;
     font-weight: 500;
@@ -42,14 +43,14 @@
     letter-spacing: 0.05em;
 }
 
-.lists{
+.lists {
     list-style-type: none;
 }
 
-.navbar .pages:hover, 
-.navbar .pages:focus, 
-.navbar .pages.currentoption, 
-.contact-info .info:hover, 
+.navbar .pages:hover,
+.navbar .pages:focus,
+.navbar .pages.currentoption,
+.contact-info .info:hover,
 .contact-info .info:focus {
     color: var(--oceancolor);
 }
@@ -62,6 +63,7 @@
     letter-spacing: 0.05em;
     text-decoration: none;
 }
+
 /*-----------------------------------*\
   #Main Section 
 \*-----------------------------------*/
@@ -87,34 +89,120 @@
 }
 
 .btn {
-    cursor: pointer; 
+    cursor: pointer;
     border-color: transparent;
     letter-spacing: 0.05em;
     font-family: inherit;
-    
+
 }
 
-.btn.primary{
+.btn.primary {
     background-color: var(--oceancolor);
-    color:var(--whitecolor);
+    color: var(--whitecolor);
     font-weight: 800;
     line-height: 1.5;
     letter-spacing: 0.05em;
 }
 
+/*---- Portfolio page ----*/
+.btn.primary2 { 
+    background: var(--ocean, #404BBF);
+    color: var(--white, #FFF);
+    text-align: center;
+    display: flex;
+    align-items: flex-start;
+/* Button Text */
+    font-family: Roboto; 
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.64px;
+}
+
+.btn.website {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    border: 1px solid var(--cornflower, #E7E9FC);
+    background: var(--cloud, #F4F4FD);
+    color: var(--iris, #4D5AE5);
+    text-align: center;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.64px;
+}
+
+.btn.app {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    border: 1px solid var(--cornflower, #E7E9FC);
+    background: var(--cloud, #F4F4FD);
+    color: var(--iris, #4D5AE5);
+    text-align: center;
+/* Button Text */
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.64px;
+}
+
+.btn.design {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    border: 1px solid var(--cornflower, #E7E9FC);
+    background: var(--cloud, #F4F4FD);
+    color: var(--iris, #4D5AE5);
+    text-align: center;
+/* Button Text */
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.64px;
+}
+
+.btn.marketing {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    border: 1px solid var(--cornflower, #E7E9FC);
+    background: var(--cloud, #F4F4FD);
+    color: var(--iris, #4D5AE5);
+    text-align: center;
+/* Button Text */
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.64px;
+}
 .btn.primary:hover,
 .btn.primary:focus {
     background-color: hotpink;
 }
 
-.desclist.titlelist{
+.desclist.titlelist {
     font-weight: 800;
     font-size: 14px;
     line-height: 1.5;
     color: var(--slatecolor);
 }
 
-.sectiontitle{
+.sectiontitle {
     text-align: center;
     color: var(--navyblue);
     font-size: 36px;
@@ -122,13 +210,13 @@
     line-height: 1.5;
 }
 
-.teamname { 
+.teamname {
     color: var(--navyblue);
     font-weight: 900;
-    
+
 }
 
-.position{
+.position {
     color: var(--slatecolor);
     font-size: 16px;
     font-weight: 400;
@@ -136,38 +224,25 @@
     letter-spacing: 0.05em;
 }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: bottom;
+.footerbg {
     background-color: var(--navyblue);
-    width: auto;
-    height: 200px;
 }
 
-.footerbg{
-    background-color: var(--navyblue);
-}
 .web-logo {
     color: var(--iriscolor);
-    margin-left: 2em;
-    align-items: auto;
-    flex-direction: row;
-    justify-content: right;
-}
-.studio-logo2{
-    color: var(--whitecolor);
-    text-justify: auto;
-    flex-direction: row;
-    justify-content: right;
-  
- }
+    
 
- .lastword{
+}
+
+.studio-logo2 {
     color: var(--whitecolor);
-    width: 265px;
-    height: 70px;
-    text-justify: auto;
-    margin-top: 4em;
-   
- }
+    
+
+
+}
+
+.lastword {
+    color: var(--whitecolor);
+
+
+}
