--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@
     gap: 32px;
 
 }
-.name {
+.container .name {
     color: var(--navyblue, #2E2F42);
     text-align: center;
     /* Header 3 */
@@ -244,7 +244,7 @@
     
 }
 
-.project.name {
+.project .name {
     display: flex;
     text-align: left;
 }
