--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 
 /*----Checked----*/
 .body {
-    font-family: 'roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     letter-spacing: 0.03em;
     color: var(--slatecolor);
@@ -45,7 +45,7 @@
 }
 
 /*----Checked----*/
-.navmenu.list .page {
+.nav-menu.list .page {
     color: var(--navcolor);
     text-decoration: none;
     font-weight: 500;
@@ -59,9 +59,9 @@
 }
 
 /*----Checked----*/
-.navmenu.list .page:hover,
-.navmenu.list .page:focus,
-.navmenu.list .page.current,
+.nav-menu.list .page:hover,
+.nav-menu.list .page:focus,
+.nav-menu.list .page.current,
 .contact-menu.list .item:hover,
 .contact-menu.list .item:focus {
     color: var(--iriscolor);
@@ -129,21 +129,27 @@
     line-height: 1.62;
 }
 
+.button.filter:hover,
+.button.filter:focus,
+button.filter.current {
+    background-color: var(--ocean);
+    color: var(--cloud);
+}
+
 /*----Index part----*/
 /*----Checked----*/
 .button.primary:hover,
-.button.primary:focus,
-.button.filter.current {
+.button.primary:focus {
     background-color: var(--oceancolor);
-    color: var(--cloud);
 }
 
 /*----Section 2----*/
 /*----Checked----*/
 .benefits .description {
     color: var(--slatecolor);
-    font-weight: 500;
-    font-size: 20px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.71;
 }
 
 /*----Checked----*/
